# mobility-plus-manipulation

./: CMakeLists.txt  README.md  locations.csv  package.xml  setup.py
launch/: mobility.launch
mobile_manipulation/: README.md
mobile_manipulation/ws_husky_abb_manipulation/husky_abb_manipulation/: CMakeLists.txt  package.xml
mobile_manipulation/ws_husky_abb_manipulation/husky_abb_manipulation/include/husky_abb_manipulation/: husky_abb_grab_object.h
mobile_manipulation/ws_husky_abb_manipulation/husky_abb_manipulation/launch/: grab_object.launch
mobile_manipulation/ws_husky_abb_manipulation/husky_abb_manipulation/src/: husky_abb_grab_object.cpp  husky_abb_grab_object_node.cpp  transform_tag_frame.cpp
mobility-plus-manipulation/: CMakeLists.txt  README.md  husky_poses.csv  locations.csv  package.xml
mobility-plus-manipulation/launch/: 1.gaz_mov_mov.launch  2.plan_tran_grab.launch  Launch commands for mobility + manipulation  husky_abb.launch  move_base_map_server_amcl.launch  moveit_planning_execution_gazebo.launch  planner.launch
mobility-plus-manipulation/scripts/: husky_abb_description.bash  planner.py  spawn_april_cubes.py
scripts/: spawn_april_cubes.py
slam_navigation/: launch commands
slam_navigation/config/: navsat_transform_node_param.yaml
slam_navigation/launch/: amcl.launch  gmapping.launch  husky_gmapping.launch  husky_move_base.launch  move_base.launch  squish_lidar_data.launch
slam_navigation/maps/: rintaru_map (backup).pgm  rintaru_map.pgm  rintaru_map.yaml
slam_navigation/rviz/: husky_slam_navigation.rviz
src/: planner.py
(+80 files in other folders)
